--- a/backend/authService/Dockerfile
+++ b/backend/authService/Dockerfile
@@ -1,4 +1,18 @@
-FROM node:18-alpine AS base
+# FROM node:18-alpine AS base
+
+# WORKDIR /app
+
+# COPY package*.json ./
+# RUN npm install --production
+
+# COPY . .
+
+# ENV NODE_ENV=production
+# EXPOSE 3001
+
+# CMD ["npm", "run", "start"]
+
+FROM node:18-alpine
 
 WORKDIR /app
 
