--- a/backend/chatService/Dockerfile
+++ b/backend/chatService/Dockerfile
@@ -1,12 +1,26 @@
-FROM node:18-alpine AS base
+# FROM node:18-alpine AS base
 
-WORKDIR /app/chatService
+# WORKDIR /app/chatService
 
-COPY chatService/package*.json ./
+# COPY chatService/package*.json ./
+# RUN npm install --production
+
+# COPY chatService/. ./
+# COPY common ../common
+
+# ENV NODE_ENV=production
+# EXPOSE 3004
+
+# CMD ["npm", "run", "start"]
+
+FROM node:18-alpine
+
+WORKDIR /app
+
+COPY package*.json ./
 RUN npm install --production
 
-COPY chatService/. ./
-COPY common ../common
+COPY . .
 
 ENV NODE_ENV=production
 EXPOSE 3004
