--- a/backend/authService/Dockerfile
+++ b/backend/authService/Dockerfile
@@ -16,12 +16,20 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+# Copy package.json first for caching
 COPY package*.json ./
+
+# Install only production dependencies
 RUN npm install --production
 
+# Copy service code
 COPY . .
+
+# Copy common folder
+COPY ../common ./common
 
 ENV NODE_ENV=production
 EXPOSE 3001
 
 CMD ["npm", "run", "start"]
+
