--- a/backend/adminService/Dockerfile
+++ b/backend/adminService/Dockerfile
@@ -17,14 +17,15 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY adminService/package*.json ./
 RUN npm install --production
 
-COPY . .
-COPY ../common ./common
+COPY adminService/ ./
+COPY common/ ./common
 
 ENV NODE_ENV=production
 EXPOSE 3003
 
 CMD ["npm", "run", "start"]
+
 
