Jenkins, Helm deploy 39

--- a/backend/adminService/Dockerfile
+++ b/backend/adminService/Dockerfile
@@ -28,20 +28,39 @@
 
 # CMD ["npm", "run", "start"]
 
+# FROM node:18-alpine
+
+# WORKDIR /app
+
+# COPY adminService/package*.json ./
+# RUN npm install --production
+
+# COPY adminService ./adminService
+# COPY common ./common
+
+# WORKDIR /app/adminService
+
+# EXPOSE 3003
+# CMD ["node", "index.js"]
+
 FROM node:18-alpine
 
 WORKDIR /app
 
+# Copy package.json from adminService
 COPY adminService/package*.json ./
 RUN npm install --production
 
+# Copy service code
 COPY adminService ./adminService
+
+# Copy shared common code
 COPY common ./common
 
 WORKDIR /app/adminService
 
-EXPOSE 3003
 CMD ["node", "index.js"]
+
 
 
 
