--- a/backend/chatService/Dockerfile
+++ b/backend/chatService/Dockerfile
@@ -28,6 +28,22 @@
 
 # CMD ["npm", "run", "start"]
 
+# FROM node:18-alpine
+
+# WORKDIR /app
+
+# COPY chatService/package*.json ./
+# RUN npm install --production
+
+# COPY chatService ./chatService
+# COPY common ./common
+
+# WORKDIR /app/chatService
+
+# EXPOSE 3004
+# CMD ["node", "index.js"]
+
+
 FROM node:18-alpine
 
 WORKDIR /app
@@ -39,9 +55,6 @@ COPY chatService ./chatService
 COPY common ./common
 
 WORKDIR /app/chatService
-
-EXPOSE 3004
 CMD ["node", "index.js"]
-
 
 
