--- a/streaming-app-helm/templates/backend.yaml
+++ b/streaming-app-helm/templates/backend.yaml
@@ -23,17 +23,18 @@ spec:
           env:
             - name: PORT
               value: "{{ $svc.port }}"
+
             - name: MONGO_URI
               value: "{{ $.Values.backend.common.mongoUri }}"
+
             - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: backend-secrets
                   key: JWT_SECRET
-{{- if eq $svc.name "auth" }}
-            - name: CLIENT_URL
-              value: "{{ $.Values.frontend.url }}"
-{{- end }}
+
+            - name: CLIENT_URLS
+              value: "{{ $.Values.backend.common.clientUrls }}"
 ---
 apiVersion: v1
 kind: Service
