Jenkins, Helm deploy 42

--- a/streaming-app-helm/templates/backend.yaml
+++ b/streaming-app-helm/templates/backend.yaml
@@ -1,10 +1,13 @@
+{{- $namespace := .Values.namespace -}}
+{{- $common := .Values.backend.common -}}
+
 {{- range $key, $svc := .Values.backend.services }}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ $svc.name }}
-  namespace: {{ $.Values.namespace }}
+  namespace: {{ $namespace }}
 spec:
   replicas: 1
   selector:
@@ -23,24 +26,23 @@ spec:
           env:
             - name: PORT
               value: "{{ $svc.port }}"
-
             - name: MONGO_URI
-              value: "{{ $.Values.backend.common.mongoUri }}"
-
+              value: "{{ $common.mongoUri }}"
             - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: backend-secrets
                   key: JWT_SECRET
-
+{{- if and (eq $svc.name "auth") $common.clientUrls }}
             - name: CLIENT_URLS
-              value: "{{ $.Values.backend.common.clientUrls }}"
+              value: "{{ $common.clientUrls }}"
+{{- end }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ $svc.name }}
-  namespace: {{ $.Values.namespace }}
+  namespace: {{ $namespace }}
 spec:
   type: ClusterIP
   selector:
